Add dev updates, dev stats
Dev updates for my repos (dcrd, dcrwallet, Decredion, dcrstakepool, dcrlnd, dcrandroid, dcrios, dcrdocs, dcrweb)

--- a/journal/201911.md
+++ b/journal/201911.md
@@ -22,21 +22,155 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 [dcrd](https://github.com/decred/dcrd): {}
 
+Code cleanup, backporting of changes to the v1.5 release branch, performance enhancements.
+
+Block traversal performance enhanced by introducing a [deterministic skip list](https://github.com/decred/dcrd/pull/2010). 
+
+More robust and objective method [introduced](https://github.com/decred/dcrd/pull/2000) for calculating total known work on the chain. This method is valid regardless of the order that blocks are received and process and does not rely on previously calculated checkpoints. 
+
+Caching [added](https://github.com/decred/dcrd/pull/2002) for least recently used key/value. {SB: what does this give us? not seeing any description on commit or PR…}
+
+New [test function](https://github.com/decred/dcrd/pull/2004) separates block processing tests (duplicates blocks, orphan blocks, reorgs, etc.) from consensus rule tests. 
+
+- blockchain: Remove unused error from HaveBlock.: https://github.com/decred/dcrd/pull/2007
+
+- [release-v1.5] sampleconfig: add export dcrctl sample config: https://github.com/decred/dcrd/pull/2006
+
+- [release-v1.5] rpcserver: Cleanup getvoteinfo RPC.: https://github.com/decred/dcrd/pull/2005
+
+- sampleconfig: add export dcrctl sample config: https://github.com/decred/dcrd/pull/2003
+
+- multi: remove global activeNetParams: https://github.com/decred/dcrd/pull/1999
+
+- blockmanager: Simplify dynamic peer height updates: https://github.com/decred/dcrd/pull/1998
+
+- blockchain: Rename KnownValid to HasValidated.: https://github.com/decred/dcrd/pull/1997
+
+- blockchain: Rename KnownValid to HasValidated.: https://github.com/decred/dcrd/pull/1997
+
+- blockchain: Remove unconfigurable chain var.: https://github.com/decred/dcrd/pull/1996 
+
 - sounds very interesting, need more info https://github.com/decred/dcrd/pull/2000
 
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
+Bug fixes, code cleanup, new methods.
+
+New [JSON RPC](https://github.com/decred/dcrwallet/pull/1611) for creating signatures {SB: what does this enable?}
+
+Method added to detect [reused addresses](https://github.com/decred/dcrwallet/commit/e2ae22778d75a104c6cfc92094e51dd3aabe66ab) {SB: seems obvious this adds to privacy, but do we have examples to illustrate?}.
+
+Issues preventing VSP ticket buying [addressed](https://github.com/decred/dcrwallet/commit/495f3fc870cdb7cfa88e18520c264bec1f9c503d).
+
+- multi: drop global activeNet usage: https://github.com/decred/dcrwallet/pull/1610
+
+- Add assets package for accessing dcrwallet file assets: https://github.com/decred/dcrwallet/commit/1fb7aff5a03f3235178111cace5dffdd07f9b26c
+
+- Avoid child index cursor backwards resets: https://github.com/decred/dcrwallet/commit/848d33040db4d522474117b38d60847e28ed946a
+
+- Upgrade cspp module for handling of server-sent errors: https://github.com/decred/dcrwallet/commit/6e2b9e30ba2d345cd984ac735352762a652f1ad0
+
 [Decrediton](https://github.com/decred/decrediton): {}
+
+Numerous bug fixes, UI tweaks, code cleanup.
+
+Choice added to [create](https://github.com/decred/decrediton/pull/2310) LN account during setup. This incentivizes users to not user their default wallet account, which could cause many channels to be automatically opened if the autopilot feature was selected {SB: is there any other reason to do this? to increase adoption?}
+
+Improvements to [info modals](https://github.com/decred/decrediton/issues/2285). 
+
+- Fix imported account showing 0: https://github.com/decred/decrediton/pull/2348
+
+- [fonts] Fix Incosolata in wrong places: https://github.com/decred/decrediton/pull/2346'
+‘
+- [Governance] Cast vote fixes at proposal details page: https://github.com/decred/decrediton/pull/2342
+
+- [multi] Fix spv link spacing and repeated VSP notification: https://github.com/decred/decrediton/pull/2340
+
+- NumTicketsInput enhancements: https://github.com/decred/decrediton/pull/2339
+
+- NumTicketsInput enhancements: https://github.com/decred/decrediton/pull/2339
+
+- [send] Fix misalignament and shadow: https://github.com/decred/decrediton/pull/2338
+
+- [actions] Fix save settings: https://github.com/decred/decrediton/pull/2328
+
+- Fix background color on Receive DCR view: https://github.com/decred/decrediton/pull/2326
+
+- [lint] Add comma-dangle rule: https://github.com/decred/decrediton/pull/2324
+
+- [lint] New version of babel-loader spreader fixes: https://github.com/decred/decrediton/pull/2323
+
+- Fix Stake info details error and clean up: https://github.com/decred/decrediton/pull/2322
+
+- upgrade jest: https://github.com/decred/decrediton/pull/2321
+
+- Multi fixes: https://github.com/decred/decrediton/pull/2320
+
+- Fix close wallet button missin in smaller screens: https://github.com/decred/decrediton/pull/2315
+
+- [ipc] Fix refresh page not connecting to daemon: https://github.com/decred/decrediton/pull/2313
+
+- Fix overview chart buttons misalignments: https://github.com/decred/decrediton/pull/2309
+
+- Revert dropdown skin everywhere but in seedword dropdowns’: https://github.com/decred/decrediton/pull/2301'
+
+- [MULTI] Fix Purchase Tickets visual design issues: https://github.com/decred/decrediton/pull/2300
+
+- [launcher] Fixes various issues with dcrd config loading: https://github.com/decred/decrediton/pull/2297
+
+- Add modal to open proposal link: https://github.com/decred/decrediton/pull/2294
+
 
 [Politeia](https://github.com/decred/politeia): {}
 
+Payment information [added](https://github.com/decred/politeia/pull/1051) to backend, allowing the CMS to fully recover invoice information anchored on politeiad. 
+
+Politeiavoter builds now supported on [Windows](https://github.com/decred/politeia/pull/1046). 
+
+- util: drop dcrwallet udb usage.: https://github.com/decred/politeia/pull/1047
+
+- [docs] Add new error details on docs: https://github.com/decred/politeia/pull/1043
+
+- [cms] Add nominated username to DCC Record: https://github.com/decred/politeia/pull/1061
+
+- [cms] Disallow subs from submitting invoices: https://github.com/decred/politeia/pull/1060
+
+- [cms] Add userid to userdetails cmd on cmswww cli:https://github.com/decred/politeia/pull/1059
+
+- [cms] Filter user details based on requester: https://github.com/decred/politeia/pull/1058
+
+- [cms] Minor fixes on api docs and cmd instructions: https://github.com/decred/politeia/pull/1057
+
+- [cms] Minor fixes on api docs and cmd instructions: https://github.com/decred/politeia/pull/1057
+
+- multi: Cleanup batched calls in cache and userdb.: https://github.com/decred/politeia/pull/1055
+
+- [pivoter] Add sampleconfig: https://github.com/decred/politeia/pull/1052
+
 [dcrstakepool](https://github.com/decred/dcrstakepool): {}
 
+Work continues to [enable](https://github.com/decred/dcrstakepool/pull/571) voting outside of dcrwallet, allowing users to arbitrarily vote on tickets whose voting rights they have the private key for. {SB: potential applications of this ability?}
 - progress of address reuse elimination
 
 [dcrpool](https://github.com/decred/dcrpool): {}
 
 [dcrlnd](https://github.com/decred/dcrlnd): {}
+
+Bug fixes, improved tests…
+
+Build variables [modified](https://github.com/decred/dcrlnd/commit/88ccb032e2bc0bcf4072ce5a460466b01a86b8b2) to be more like other Decred software. 
+
+Asset package (originally created for dcrwallet) [introduced](https://github.com/decred/dcrlnd/commit/16f527454a82ab033d51a56bf92006d0dccf495c) to deterministically obtain a copy of the sample dcrlnd config. 
+
+Dockerfile [updated](https://github.com/decred/dcrlnd/commit/cb98a628ea773bebc79c543ede0ebb659c99b697) for dcrlnd. Test [improved](https://github.com/decred/dcrlnd/pull/52) following GitHub actions failures. 
+
+Test for rare [race condition](https://github.com/decred/dcrlnd/commit/b5fbd6a0e4cb7a15cfcf40f97322206a25d80709) added.
+
+- More improvement to tests after github actions failures: https://github.com/decred/dcrlnd/pull/52
+
+- Fix zpay decode: https://github.com/decred/dcrlnd/pull/59
+
+- config: dcrwallet updated with activenetparam: https://github.com/decred/dcrlnd/pull/61
 
 [cspp](https://github.com/decred/cspp): {}
 
@@ -44,20 +178,44 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 [dcrandroid](https://github.com/decred/dcrandroid): {}
 
+Work on new UI continues with overhauled [send](https://github.com/raedahgroup/dcrios/issues/510), [overview](https://github.com/raedahgroup/dcrios/issues/506), [restore wallet](https://github.com/raedahgroup/dcrios/issues/505) and [verify seed](https://github.com/raedahgroup/dcrios/pull/530) pages.
+
 [dcrios](https://github.com/raedahgroup/dcrios): {}
+
+UI tweaks, bug fixes.
+
+Nav menu [redesigned](https://github.com/raedahgroup/dcrios/pull/524). Notification added to show [sync status](https://github.com/raedahgroup/dcrios/pull/529) when app in background mode. 
+
+- Deprecate SlideMenuController and dependences: https://github.com/raedahgroup/dcrios/pull/545
+
+- Access app state from main thread: https://github.com/raedahgroup/dcrios/pull/546
+
+- Update block explorer URL: https://github.com/raedahgroup/dcrios/pull/547
+
 
 [dcrdata](https://github.com/decred/dcrdata): {}
 
 [docs](https://github.com/decred/dcrdocs): {}
 
+New [privacy guide](https://github.com/decred/dcrdocs/pull/1029), overhaul of [governance overview](https://github.com/decred/dcrdocs/pull/1030), links to new [devdocs](https://github.com/decred/dcrdocs/pull/1017), minor updates and cleanup. 
+
 [decred.org](https://github.com/decred/dcrweb): {}
 
+Minor updates, cleanup.
+
+Cobo custodial wallet [removed](https://github.com/decred/dcrweb/pull/745), with view that custodial solutions should not be promoted. Exchange page [updated](https://github.com/decred/dcrweb/pull/743) (Nanex, OOOBTC removed).  
+
+- build: bump to hugo v0.59.1: https://github.com/decred/dcrweb/pull/752
+
+- Remove synchronous ajax calls: https://github.com/decred/dcrweb/pull/753
+
+- Host CSPP paper on decred.org: https://github.com/decred/dcrweb/pull/754/commits/5b36f9756047d63ed5d9721bb8ede0944f273671
 Other:
 
 - reproducible builds progress https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$157308464734953aRCth:decred.org
 - rpi https://twitter.com/karamblez/status/1197676296240861186 https://github.com/karamble/dcraspaper
 
-Dev activity stats for November: {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository.
+Dev activity stats for November: 173 active PRs, 342 master commits, 71708K added and 19384K deleted lines spread across 12 repositories. Contributions came from 1-7 developers per repository.
 
 ## People
 
