--- a/journal/201911.md
+++ b/journal/201911.md
@@ -308,7 +308,11 @@ New merchants:
 
 ## Outreach
 
-{overview of outreach/communications/marketing activity for past month and any short-term plans}
+November featured Decred at a number of high profile events across the world. Many of the same team members from last year returned this year to Websummit in Lisbon, Portugal, where Decred was one of the only crypto projects to exhibit and speak. Marco Peereboom represented the crypto industry on a panel titled, "Can You Trust Your Bank," which can be viewed [here](https://vimeo.com/375884648). [Dominic represented Decred at the 2019 Global Blockchain Summit in Wuzhen, China on November 7-9](https://twitter.com/wanbihou/status/1193218449721311233?s=20). 
+
+Dustorf shared drafts of all new decred.org subpages in the writers room, and after community input, everything has been submitted to Eeter for final assembly, testing and publication. 
+
+The Decred Assembly featured a [Deep Dive on 1.5 rc1 with Dave Collins](https://www.youtube.com/watch?v=gGQuY0kOt7g) in November, and episodes of Decred in Depth features [Liz Bagot on PR](https://soundcloud.com/decredindepth/ep-11-liz-bagot-pr-marketing) and [Akin Sawyerr on Africa and Governance](https://soundcloud.com/decredindepth/ep-12-akin-sawyerr-dcr-africa-governance).
 
 https://xaur.github.io/writings/posts/20191127-marketing-strategies.html (discussion https://www.reddit.com/r/decred/comments/e2lhwd/marketing_strategies/ )
 
