--- a/journal/201911.md
+++ b/journal/201911.md
@@ -329,17 +329,18 @@ Attended:
 - Nov 7 - [Journey 4.0](https://twitter.com/legal_medellin/status/1189918302061187073) - Medellín, Colombia. {any info? @elian?}
 - Nov 8 - [World Blockchain Conference](https://www.8btc.com/wbc-2019/) - Jiaxing, China. @Dominic has represented Decred and talked about DAO and privacy features. There have been reports of him being turned into a [cyborg](https://twitter.com/wanbihou/status/1192484367626424321) at the party preceding the event. Community members in the region are advised to follow standard protocols and take necessary precautions. Another notable event is video footage of [dancing](https://twitter.com/wanbihou/status/1193154668601327617) that sparked [#DecredDanceChallenge](https://twitter.com/hashtag/DecredDanceChallenge). (photos: [1](https://twitter.com/wanbihou/status/1192806081568722944), [2](https://twitter.com/wanbihou/status/1193218449721311233))
 - Nov 15-16 - [CriptoBlock](https://criptoblock.com.br/) - São Paulo, Brazil. @Rhama and @girino gave talks about Decred. Although the organizers worked hard, only around 250 people attended out of 1000-1200 expected, reflecting today's market. Decred was a bronze sponsor.
-- Nov 16 - [BitConf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. {how did it go? @emiliomann?}
 - Nov 21 - [Africa Blockchain Summit](https://www.africablockchainsummit.com/agenda.html) - Rabat, Morocco. @arij took the opportunity to discover the point of view of view of centralized organizations and to represent Decred to a wide variety of people from different backgrounds. ([report](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$157443668448708migov:decred.org), [photos](https://twitter.com/DecredArabia/status/1197622992806776833))
-- Nov 21 - [Africa Fintech Summit](https://africafintechsummit.com/addis/) - Addis Ababa, Ethiopia. @akinsawyerr spoke on a blockchain panel and made a few valuable connections. Check the full report and photos [here](https://github.com/decredcommunity/events/blob/master/reports/20191121-africa-fintech-summit-addis-ababa-ethiopia.md). A week later he talked about Decred and the trip at [@VOANews](https://twitter.com/AkinSawyerr/status/1199724552617709568).
-- Nov 21 - Decred Meetup - Berlin, Germany. Hosted by BlueYard. {did it happen? @Haon?}
+- Nov 21 - [Africa Fintech Summit](https://africafintechsummit.com/addis/) - Addis Ababa, Ethiopia. @akinsawyerr spoke on a blockchain panel and made a few valuable connections. Check the full report and photos [here](https://github.com/decredcommunity/events/blob/master/reports/20191121-africa-fintech-summit-addis-ababa-ethiopia.md). A week later he talked about Decred and the trip at @VOANews ([video](https://www.youtube.com/watch?v=WOqCjQELpao)).
 - Nov 21 - [Blockchain Conference](https://www.eventbrite.com.ar/e/conferencia-blockchain-tickets-81397410847) - Veracruz, Mexico. The event took place in the largest technology university in the city. {any info? @luisantoniocrag @francov_}
+- Nov 30 - [Decred Meetup](https://twitter.com/RodgersJabz/status/1194309441774063617) - Kampala, Uganda. The audience of 53 received an intro to Decred and its features and a practical session showing how to use the wallet. Full report by @jabz here {todo}.
 
 Upcoming:
 
 - 5-year anniversary event for the Bitcoin Vietnam community. {@joshuam what is the date, city and any extra info?}
 - Dec 4 - [Decred Demo](https://www.meetup.com/BlockchainMelbourne/events/266857183/) - Melbourne, Australia. @eSizeDave will showcase Decrediton and Politeia. Hosted by Blockchain Centre. Speakers must not be intoxicated.
+- Jan 7 - [Digital Money Forum](https://thedigitalmoneyforum.com/) - Las Vegas, USA. The event is part of CES 2020. @akinsawyerr will talk on a [session](https://thedigitalmoneyforum.com/Sessions/the-problem-with-old-money-a-great-debate/) about future economy.
 - Jan 29-31 - [Crypto 101 Online Summit](https://www.crypto2020summit.com/) - web. @lukebp will give an overview of Decred's plans for 2020.
+- May, date TBA - [BitConf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. The event was moved to May 2020.
 
 ## Media
 
@@ -546,5 +547,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, Dustorf, richardred, s\_ben
-- reviews and feedback: {}
+- reviews and feedback: akinsawyerr, Haon, emiliomann
 - title image: saender
