add rel ext pt1

--- a/journal/201911.md
+++ b/journal/201911.md
@@ -435,34 +435,35 @@ In November DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average d
 
 {PoW, ASIC resistance, full nodes, cc network security and other cc tech}
 
-https://blog.coinbase.com/how-coinbase-views-proof-of-work-security-f4ba1a139da0
+Coinbase published a [post](https://blog.coinbase.com/how-coinbase-views-proof-of-work-security-f4ba1a139da0) about PoW security, outlining its position that it is advantageous for security that the coin be mined by hardware for which this is the dominant use (i.e. ASICs), and that manufacturing and ownership diversity is well served by ASIC-friendly algorithms. 
 
-MicroBT (maker of Whatsminer D1, one of the current top Decred miners) CEO arrest https://insidebitcoins.com/news/chinese-police-conduct-snap-raid-of-microbt-premises-arrests-ceo/242367
+The CEO of MicroBT (maker of Whatsminer D1, one of the current top Decred miners) was [arrested](https://insidebitcoins.com/news/chinese-police-conduct-snap-raid-of-microbt-premises-arrests-ceo/242367) in Shenzen, China, in relation to a mining patent infringement.
 
-Bug in Zcash implementation [leaked metadata](https://duke.leto.net/2019/10/01/zcash-metadata-leakage-cve-2019-16930.html) and allowed to link IP addresses to Zcash shielded addresses (_missed in Oct_). From the developer who discovered it: "All people who use zaddrs and who have shared zaddrs with 3rd parties. (...) Consider your IP address and geo-location information associated with it as tied to your zaddr.". The bug was copied from Bitcoin Core codebase and introduced in Zcash in 2016. The leak was fixed in v2.0.7-3, although the [security announcement](https://z.cash/support/security/announcements/security-announcement-2019-09-24/) just recommended to upgrade immediately without any details. A number of project inheriting Zcash code is affected as well. This shows that privacy tech is very delicate and requires less error-prone programming approach, extremely thorough review and testing.
+A bug in Zcash implementation [leaked metadata](https://duke.leto.net/2019/10/01/zcash-metadata-leakage-cve-2019-16930.html) and allowed an attacker to link IP addresses to Zcash shielded addresses (_missed in Oct_). From the developer who discovered it: "All people who use zaddrs and who have shared zaddrs with 3rd parties. (...) Consider your IP address and geo-location information associated with it as tied to your zaddr.". The bug was copied from Bitcoin Core codebase and introduced in Zcash in 2016. The leak was fixed in v2.0.7-3, although the [security announcement](https://z.cash/support/security/announcements/security-announcement-2019-09-24/) just recommended to upgrade immediately without any details. A number of projects inheriting Zcash code are affected as well. This shows that privacy tech is very delicate and requires less error-prone programming approach, extremely thorough review and testing.
 
-{privacy}
+The Zcash Foundation and ECC reached [agreement](https://www.zfnd.org/blog/zcash-trademark-resolution/) on how to handle the Zcash trademark. This has been transferred to the Foundation, with an agreement where it shares bilateral power to enforce the mark with ECC. This coindesk [article](https://www.coindesk.com/zcash-trademark-talks-were-about-more-than-a-logo) explains how the dispute was about more than a logo, and the power of the trademark holder to effectively decide which chain is Zcash. 
 
-https://medium.com/dragonfly-research/breaking-mimblewimble-privacy-model-84bcd67bfe52
+Decred adds another dimension whereby the legitimacy of the chain is established by voters, and minority forks are heavily disincentivized with significant challenges to overcome. Even if someone attempts to steal the Decred "trademark", there should not be confusion about what the original chain is because voters are signing each block. Also, Decred has a very clear answer to "who exactly is hiring the dev org? what is the 'community'?" - stakeholders.
 
-https://www.unknown.fund/press-release great example that given a fair and open money system, sooner or later people begin to organize to fund great things.
+Resolution of the ZEC trademark issue allowed [polling](https://www.zfnd.org/blog/community-sentiment-collection-poll/) for NU4 to proceed, where the Zcash ecosystem/community can signal support for 13 options to fund development. The EFF and Zcash Foundation will consider the results from 3 [or 4](https://twitter.com/zooko/status/1200917828011876352) different polling methods when deciding what plan to adopt.
 
-{governance, funding, chain forks, community forks, controversy}
+Aragon [completed](https://blog.aragon.org/final-results-from-aragon-network-vote-4/) its 4th AGP voting round, 15 proposals were voted on and ANT participation was around 3-18%. Among the approved proposals was [AGP-103](https://github.com/aragon/AGPs/blob/master/AGPs/AGP-103.md), introducing a network budget of 5% Treasury value or 250,000 DAI (whichever is greater) per quarterly voting cycle. The largest proposal to be approved (with 9% turnout, 91% approval) is [AGP-106](https://github.com/aragon/AGPs/raw/1bee7c003d2e0dbfdc8cfe698198adeaf2cf0c7b/AGPs/AGP-106.md) to develop and launch Aragon Chain, at a cost of $500,000. The aim is to create a new layer 1 protocol and offer it as an alternative to the Ethereum-based Aragaon network. Among the reasons cited were increasing costs of keeping up with changes to the Ethereum network's changes. [AGP-112](https://github.com/aragon/AGPs/raw/1bee7c003d2e0dbfdc8cfe698198adeaf2cf0c7b/AGPs/AGP-112.md), which also passed, issued a proclamation that Aragon is opposed to ProgPoW on Ethereum, or any other non-emergency change to mining algorithm before Ethereum 2.0. The highest turnout proposal was [AGP-81](https://github.com/aragon/AGPs/raw/1bee7c003d2e0dbfdc8cfe698198adeaf2cf0c7b/AGPs/AGP-81.md), with 17% of ANT turning out to vote no on a collaboration with Kleros on the court system.
 
-ZEC trademark:
+Aragon Court [launched](https://blog.aragon.org/aragon-court-is-live-on-mainnet/) on mainnet, it is a system for adjudicating "subjective disputes that cannot be resolved by smart contracts". ANT holders can stake their tokens for ANJ tokens, which can then be staked to participate in adjudication on cases brought before the court. Decisions are made through a Schelling game where those who guess the majority decision are rewarded and those who guess wrong have their stake slashed. Registration to become ANJ jurors is set to begin in Jan 2020.
 
-  - https://www.coindesk.com/zcash-trademark-talks-were-about-more-than-a-logo
-  - "If we had a robust, both Sybil-resistant and anonymous voting system, then we wouldn’t even be having this conversation," Mann told CoinDesk.
-  - In Decred, there is another dimension where legitimacy of the chain is established by voters. Minority forks are heavily disincentivized. Even if someone attempts to steal the Decred "trademark", there will never be confusion about what the original chain is because voters are signing each block. Also, Decred has a very clear answer to "who exactly is hiring the dev org? what is the 'community'?" - stakeholders.
-  - {here or in Media?}
 
-Huge XLM burn https://www.stellar.org/blog/sdfs-next-steps
 
-https://www.theblockcrypto.com/linked/45793/the-stellar-foundation-has-burned-over-50-of-the-total-xlm-token-supply-canceling-airdrop-programs
+Dragonfly research published an [article](https://medium.com/dragonfly-research/breaking-mimblewimble-privacy-model-84bcd67bfe52) about "breaking Mimblewimble's privacy model" by monitoring the network in real time. @jy-p had identified this issue as part of his review of privacy solutions, and subsequently discussed it on the base layer [podcast](https://acrabaselayer.podbean.com/e/base-layer-episode-086-jake-yocom-piatt-decred/).
 
-https://cointelegraph.com/news/eos-blockchain-congested-eidos-airdrop-95-of-transfers
+An "Unknown Fund" was [announced](https://www.unknown.fund/press-release), pledging to invest and donate $75 Million in Bitcoin for the startups which directly or indirectly support the idea of anonymity. "Preference will be given to the following niches: protection of personal data, tools for anonymity, cryptocurrency and blockchain." The fund is quite opaque, only saying that "Applications are closed for the Unknown Fund.  Evaluation will take a few months."
 
-https://cointelegraph.com/news/eos-creator-blockone-to-vote-for-block-producers-with-95-of-coins
+The Stellar Development Foundation (SDF) [announced](https://www.stellar.org/blog/sdfs-next-steps/) that it had [burned](https://www.theblockcrypto.com/linked/45793/the-stellar-foundation-has-burned-over-50-of-the-total-xlm-token-supply-canceling-airdrop-programs) 55 billion XLM, worth over $4.4 billion (notionally), and representing more than 50% of the entirely pre-mined XLM supply. The stated reasons were a belief that the foundation could achieve its aims with less funding, and that the large scale airdrop campaigns were proving ineffective.
+
+The EOS blockchain [entered](https://cointelegraph.com/news/eos-blockchain-congested-eidos-airdrop-95-of-transfers) "congestion mode" due to a surge in transactions related to an airdrop program (EIDOS), which at one stage accounted for 95% of all EOS transactions. One effect is that users who have less staked EOS are unable to make transactions until demand for the airdrop subsides or its CPU lease expires in 30 days. Another effect was a surge of 100,000% in the cost of CPU time on the network.
+
+Block.one [announced](https://cointelegraph.com/news/eos-creator-blockone-to-vote-for-block-producers-with-95-of-coins) that it is going to begin voting for block producers with the 9.5% of EOS it controls - classifying itself as a “Small, but significant EOS token holder”. Block.one did not announce how they will be voting.
+
+EOS New York [tweeted](https://twitter.com/eosnewyork/status/1199813240307568641) to uncover the fact that 6 of the registered EOS BPs appear to be operated by the same entity. Although the BPs in question are not in the top 21 active BPs, they were receiving rewards regularly as standby BPs.
 
 Tezos supply-demand dynamics {worthy?} https://twitter.com/john_iller/status/1197984641761923073
 
@@ -484,11 +485,9 @@ Delisting of privacy coins such as Monero, Zcash, Dash and others (_missed in Se
   - https://www.coindesk.com/okex-korea-reviewing-decision-to-delist-privacy-coins-zcash-and-dash
 - Upbit announced Sep 20 https://cointelegraph.com/news/upbit-exchange-delists-privacy-coins-due-to-money-laundering-concerns
 
-Virgin Bitcoins are 10-30% more expensive than Bitcoins with history, according to a [blog](https://medium.com/@official_83664/what-are-virgin-bitcoins-and-where-can-i-buy-them-d6eab0f669e0) by Vertex Marketplace. This should be no surprise to anyone who understands fungibility.
+Virgin Bitcoins are 10-30% more expensive than Bitcoins with history, according to a [blog](https://medium.com/@official_83664/what-are-virgin-bitcoins-and-where-can-i-buy-them-d6eab0f669e0) by Vertex Marketplace. This should be no surprise to anyone who understands fungibility. {rr: is this a reliable source? it's selling a virgin bitcoin service... doesn't quote anything for the 10-30% markup stat}
 
 Bittrex has [adopted](https://www.coindesk.com/bittrex-chainalysis-kyt) Chainalysis [Know Your Transaction](https://blog.chainalysis.com/reports/real-time-alerts-press-release) software that monitors 15 cryptoassets for suspicious activity in real-time. (_missed in Sep_).
-
-https://blog.aragon.org/final-results-from-aragon-network-vote-4/
 
 https://www.reddit.com/r/ethtrader/comments/dwiu4f/donutsonethereum_registration_is_open/
 
