--- a/journal/201911.md
+++ b/journal/201911.md
@@ -250,23 +250,24 @@ https://www.blockcommons.red/publication/mm-tracking-1/ {or in Markets?}
 
 {cross-check dcrdata.org, dcrstats.com and charts.dcr.farm to get the numbers}
 
-Hashrate: November's hashrate opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month. Pool hashrate distribution as of {date}: {pool name n%, ...} per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
+Hashrate: November's hashrate opened at ~472 Ph/s and closed ~381 Ph/s, bottoming at 322 Ph/s and peaking at 571 Ph/s throughout the month. Pool hashrate distribution as of Dec 4:  Poolin 34.5%,UUPool 32.3%, F2Pool 11.6%, lab.antpool.com 6.8%, BTC.com 2.8%, Luxor 2.3%, Coinmine 0.11%, BeePool 0.10%, suprnova 0.01% and others 9.45% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
-{helpful for PoS: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
 
-Staking: 30-day average ticket price was {n.n} DCR (+{n.n}) per dcrstats.com. The price varied between {n.n}-{n.n} DCR. Locked amount was {n.nn}-{n.nn} million DCR, which corresponded to {n.n}-{n.n}% of the available supply.
+Staking: 30-day average ticket price was 134.76 DCR (+2.46) per dcrstats.com. The price varied between 124.1-150.3 DCR. Locked amount was 5.3-5.48 million DCR, which corresponded to 49.6-51% of the available supply.
 
-{recap of ticket price action if it was interesting}
-
-Ticket price broke 150 after a 10-day streak of 19 increases.
+The ticket price went up to 150.3 DCR. This is the highest it has been since the sdiff algorithm change.
 
 {helpful for nodes: https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=now-40d&to=now }
 
 Nodes: As of {date} there were {n} public listening nodes and {n} normal nodes per {new source?}. Version distribution: {vx.y.z: n% (+n%), ...}.
 
+{charts.dcr.farm is down}
+
 {any interesting analysis or events in the network}
 
-Block 400k https://www.reddit.com/r/decred/comments/e0yvyb/block_400000/
+As of Dec 4, around 24% of PoS voters are signaling that they have upgraded and are ready to vote for the consensus rule change, per [dcrdata](https://explorer.dcrdata.org/agendas).
+
+Block 400k https://www.reddit.com/r/decred/comments/e0yvyb/block_400000/ {Is this significant ?}
 
 ## Mining
 
