--- a/journal/201911.md
+++ b/journal/201911.md
@@ -240,11 +240,11 @@ Community stats:
 
 In November the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 14,096 DCR and spent 17,889 DCR. Using November's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. At Octobers's average daily rate of ${n.nn}, the USD figure billed for work completed in that month is ${n}K. As of Dec 2, Treasury balance is 640,201 DCR, ($12.4 million USD at $19.44).
 
-There were two new proposals submitted, one for $650 for a DCR version of Point of Sale app [PlusBit](https://proposals.decred.org/proposals/e559188b0febcab29c49c1f7dd5c66645e31be00894a150ef7d0b8ceb6486605), and one by @buck54321 requesting $30,000 for continued development of [TinyDecred](https://proposals.decred.org/proposals/ad0f9688b3467734e2581604914b2cc32c6eb7991dff460eff41d21f66d88451). 
+There were two new proposals submitted, one for $650 for a DCR version of Point of Sale app [PlusBit](https://proposals.decred.org/proposals/e559188b0febcab29c49c1f7dd5c66645e31be00894a150ef7d0b8ceb6486605), and one by @buck54321 requesting $30,000 for continued development of [TinyDecred](https://proposals.decred.org/proposals/ad0f9688b3467734e2581604914b2cc32c6eb7991dff460eff41d21f66d88451). Voting started for both proposals on Dec 3.
 
-The proposal for Latam Marketing and Events by @elian was approved with 75% Yes votes and 
+The [proposal](https://proposals.decred.org/proposals/5af0ce1cd325be6be39109c2750f34095c4e8feeea962ede058a1e4f4a61473e) for Latam Marketing and Events by @elian was approved with 75% Yes votes and 29% participation, and the research and education [proposal](https://proposals.decred.org/proposals/65bde4146b845e7e839d6916d4d8f642bc39c250df5379c2f1e26c4ab778ec1a) by @ammarooni was approved with 80% Yes votes and 29% participation. The Dota2 prize [proposal](https://proposals.decred.org/proposals/5a1bd4116565d107c1672799ed16cae9e92ec633c6e39d9b463b8218e66ff759) was rejected with 5% approval and 29% participation.
 
-https://www.blockcommons.red/publication/mm-tracking-1/ {or in Markets?}
+@richardred produced a [report](https://www.blockcommons.red/publication/mm-tracking-1/) into the DCR order books from mid-October to mid-November, as i2 Trading started making DCR markets in line with their approved [proposal](https://proposals.decred.org/proposals/2eb7ddb29f151691ba14ac8c54d53f6692c1f5e8fe06244edf7d3c33fb440bd9). The additional liquidity is available, although according to the way it has been measured over this timeframe (where price volatility created difficult conditions), it was probably not available with 90% uptime across all exchanges and pairs. 
 
 ## Network
 
@@ -407,7 +407,7 @@ Selected Twitter highlights:
 - @Checkmate [thread](https://twitter.com/_Checkmatey_/status/1197225489959718913) on Decred security.
 - @permabullnino [tweets](https://twitter.com/PermabullNino/status/1195356846778912769) about Decred competitive moats.
 - @ammarooni [tweets](https://twitter.com/Ammarooni/status/1199804834133762054) to go with the economic breakthrough piece.
-- Jesse Walden [tweet](https://twitter.com/jessewldn/status/1194632275389898753) about the Politeia one year report
+- Jesse Walden [tweet](https://twitter.com/jessewldn/status/1194632275389898753) about the Politeia one year report.
 - @lukebp [tweets](https://twitter.com/lukebp_/status/1199134933773500416) about what it's like to develop for Decred, started a #cryptodevs hashtag with a number of other people adding their perspectives on what it's like working for Decred.
 
 > - Work with a world class team
